@@ -1,6 +1,8 @@
 20 Aug 2005 mipsator
  * replaced old makefile template by the one generated by pmkscan
    (CFLAGS has been modified and added CONFDIR and PRIVSEP_USER).
+ * enabled compat tests.
+ * updated pmkscan latest changes (polishing).
 
 18 Aug 2005 mipsator
  * added MANDIR and SYSCONFDIR support in pmkscan.
